--- a/dajeong/.gitignore
+++ b/dajeong/.gitignore
@@ -1,37 +1,83 @@
-HELP.md
-.gradle
+dajeong/.env
+
+# Java & Spring Boot 기본
+*.class
+*.log
+*.war
+*.jar
+*.iml
+
+# IntelliJ IDEA
+.idea/
+*.iws
+*.ipr
+*.iml
+out/
+*.hprof
+
+# VS Code
+.vscode/
+
+# Maven
+target/
+
+# Gradle
+.gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+gradle-app.setting
+# gradle logs
+build/
+!src/main/resources/static/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+# OS 시스템 파일
+.DS_Store
+Thumbs.db
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+# 환경설정 / 민감 정보
+dajeong/.env
+*.env
+*.key
+*.pem
+*.crt
+*.jks
+*.p12
+*.db
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# 로그 / 캐시
+*.log
+logs/
+*.cache
+*.pid
+*.seed
+*.orig
+
+# Spring Boot devtools 재시작 캐시
+.spring-boot-devtools.properties
+.spring-boot-devtools
+
+# 테스트 커버리지
+coverage/
+test-output/
+jacoco.exec
+
+# 기타
+nohup.out
+hs_err_pid*
+
+# Local database (예: H2, SQLite 등)
+*.mv.db
+*.h2.db
+*.sqlite3
+
+# 프로젝트 설정 백업
+*.bak
+*.swp
+*.swo
+
+# Windows 시스템
+ehthumbs.db
+Desktop.ini
 
 ### VS Code ###
 .vscode/
