--- a/dajeong/src/main/resources/application.yml
+++ b/dajeong/src/main/resources/application.yml
@@ -29,3 +29,10 @@ spring:
 
   profiles:
     active: dev
+
+openai:
+  api:
+    key: ${openai.api.key}
+    base: ${openai.api.base}
+  model:
+    id: ${openai.model.id}
