--- a/dajeong/build.gradle
+++ b/dajeong/build.gradle
@@ -27,14 +27,18 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation("com.deepl.api:deepl-java:1.6.0")
 	compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+	testImplementation 'com.h2database:h2'
 	implementation("com.theokanning.openai-gpt3-java:service:0.18.2")
 	implementation 'io.github.java-diff-utils:java-diff-utils:4.12'
-
+	implementation "com.google.cloud:google-cloud-texttospeech:2.13.0"
+	implementation "com.google.protobuf:protobuf-java:3.24.1"
 }
 
 tasks.named('test') {
