--- a/dajeong/src/main/resources/application.yml
+++ b/dajeong/src/main/resources/application.yml
@@ -32,6 +32,7 @@ spring:
 
 
 server:
+  forward-headers-strategy: native
   error:
     include-stacktrace: never        
     include-message: always   
