Remove .venv, .hf_cache, build artifacts from tracking

--- a/dajeong/.gitignore
+++ b/dajeong/.gitignore
@@ -3,6 +3,11 @@ DJ.pem
 .env
 *.service
 dajeong-466810-f88dc4c32c0d.json
+python/.hf_cache
+.venv/
+venv/
+python/policy_chroma_db/
+
 
 # Java & Spring Boot 기본
 *.class
